oriterm_core/tests/teseq/harness/snapshots/teseq__harness__assertions__csi_reports_dsr_cursor_moved_responses.snap
---
source: oriterm_core/tests/teseq/harness/assertions.rs
expression: "pty_writes.join(\"\\n\")"
---
[1b, 5b, 31, 30, 3b, 32, 30, 52]
