oriterm_core/tests/teseq/harness/snapshots/teseq__harness__assertions__csi_reports_dsr_origin_mode_responses.snap
---
source: oriterm_core/tests/teseq/harness/assertions.rs
expression: "pty_writes.join(\"\\n\")"
---
[1b, 5b, 33, 3b, 31, 30, 52]
