oriterm_core/tests/teseq/harness/snapshots/teseq__harness__assertions__esc_ri_grid.snap
---
source: oriterm_core/tests/teseq/harness/assertions.rs
expression: outcome.grid_text
---
inserted                                                                        
LINE0                                                                           
LINE1                                                                           
LINE2
