oriterm_core/tests/teseq/harness/snapshots/teseq__harness__assertions__esc_scs_g0_grid.snap
---
source: oriterm_core/tests/teseq/harness/assertions.rs
expression: outcome.grid_text
---
─────-----
