oriterm_core/tests/teseq/harness/snapshots/teseq__harness__assertions__mode_interactions_altscreen_reentry_1049_grid.snap
---
source: oriterm_core/tests/teseq/harness/assertions.rs
expression: outcome.grid_text
---
First visit                                                                     
Second visit
